<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="aev.sec.com.aev.LoginActivity">
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:id="@+id/container"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logo_layout">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="150dp">
            <android.support.v7.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/logo_image"
                android:scaleType="centerCrop"
                android:src="@mipmap/background_cropped_two"
                />
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:id="@+id/login_text"
       android:layout_centerInParent="true"
        android:text="@string/login_text"
        android:textAlignment="center"
        android:textSize="21dp"
        android:textStyle="bold"
        android:textColor="@color/white"/>
</RelativeLayout>
            <android.support.v7.widget.AppCompatImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:srcCompat="@mipmap/logo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="110dp"/>
        </RelativeLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/login_layout"
            android:layout_below="@+id/logo_layout"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:hint="@string/user_name_hint" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccent">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:id="@+id/input_password"
                    android:textColor="@color/black"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <Button android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_login"
                android:background="@color/colorPrimary"
                android:layout_marginTop="40dp"
                android:textColor="@color/white"/>

        </LinearLayout>
<android.support.v7.widget.AppCompatTextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:id="@+id/forgot_password"
    android:text="@string/forgot_password"
    android:textColor="@color/black"
    android:layout_below="@+id/login_layout"
    android:layout_alignParentRight="true"
    android:paddingRight="20dp"/>


<android.support.v7.widget.AppCompatTextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:id="@+id/register_here_text"
    android:textColor="@color/black"
   android:layout_below="@+id/forgot_password"
    android:textAlignment="center"
    android:text="@string/register_here"/>


        <Button
            android:id="@+id/btn_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_register"
            android:background="@color/colorPrimary"
            android:layout_margin="20dp"
            android:padding="5dp"
            android:layout_below="@+id/register_here_text"
            android:textColor="@color/white"/>



        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress_bar"
            android:layout_centerInParent="true"
            android:visibility="gone"/>


    </RelativeLayout>
    </ScrollView>
