<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    tools:context="aev.sec.com.aev.SignUpActivity">
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logo_layout">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp">
                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/logo_image"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/background_cropped_two"
                    />
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:id="@+id/register_text"
                    android:text="@string/register_text"
                    android:layout_centerInParent="true"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textSize="21dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
            </RelativeLayout>
            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/back_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                app:srcCompat="@drawable/back_white"
                android:padding="8dp"
                tools:ignore="VectorDrawableCompat" />
            <android.support.v7.widget.AppCompatImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:srcCompat="@mipmap/logo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="110dp"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/register_layout"
            android:layout_below="@+id/logo_layout"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccent">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:id="@+id/input_password"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/user_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/user_name_hint" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/home_address_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_home_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:minLines="5"
                    android:hint="@string/home_adress_hint" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/postal_code_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_postal_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:maxLength="6"
                    android:hint="@string/postal_code_hint" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/city_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_city"
                    android:layout_width="match_parent"
                 android:editable="false"
                    android:layout_height="wrap_content"
                    android:hint="@string/city_hint" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/phone_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                   android:inputType="number"
                    android:hint="@string/phone_hint" />
            </android.support.design.widget.TextInputLayout>

            <Button android:id="@+id/btn_next"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_next"
                android:background="@color/colorPrimary"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:textColor="@android:color/white"/>

        </LinearLayout>

<ProgressBar
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/progress_bar"
    android:layout_centerInParent="true"
    android:visibility="gone"/>
    </RelativeLayout>
    </ScrollView>
