<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:id="@+id/container"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp"
            android:background="@color/colorPrimary"
            android:layout_height="?attr/actionBarSize">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/back_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    app:srcCompat="@drawable/back_white"
                    android:padding="8dp"
                    tools:ignore="VectorDrawableCompat" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:id="@+id/otp_heading"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:text="@string/verify_account"
                    android:textSize="@dimen/screen_heading"
                    />

            </RelativeLayout>
        </android.support.v7.widget.Toolbar>


        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:id="@+id/enter_code_text"
            android:textAlignment="center"
            android:layout_margin="20dp"
            android:text="@string/enter_4_digit_code"/>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/enter_code_text"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/email"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:text="@string/at_number"/>

            <aev.sec.com.aev.customviews.PinEntryEditText
                android:id="@+id/txt_pin_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:cursorVisible="false"
                android:digits="1234567890"
                android:inputType="number"
                android:layout_below="@+id/email"
                android:maxLength="4"
                android:textIsSelectable="false"
                android:textSize="25sp"
                android:visibility="visible"
                app:pinLineColors="#dedede"
                app:pinRepeatedHint="•" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_submit"
            android:background="@color/colorPrimary"
            android:layout_margin="20dp"
            android:padding="5dp"
            android:layout_below="@+id/txt_pin_entry"
            android:textColor="@color/white"/>

    </RelativeLayout>
